  - awaiting customers can have nodes (alec)
  - Smarty integration: LMS's smarty addons rewrited to plugins in 
    lib/Smarty/plugins, removed option 'smarty_dir', now Smarty will be included 
    in LMS packages (alec)
    ************ WARNING: remove contents of templates_c directory! ************
  - added 'post-action' in document templates (alec)

version 1.9.2 Thanos (2006-07-15):
  
  - added possibility to read customer's own iban bank account number from 
    ui (lexx)
  - added 'set names utf8;' for connection to mysql >= 5.0 (lexx)
  - added input field for cust. ID on New Cash Document (alec)
  - lmsd/tc: added %if variable for host_mark_up, host_mark_down,
    host_htb_up, host_htb_down options (alec/Tomasz Przybysz)
  - fixed timetable searching by user (alec)
  - lms-payments: added option 'customergroups' and replacement
    variables %current_period, %next_period for 'comment' option (alec)
  - lms-makedhcpconf: added option 'authoritative' (ReYu)
  - BTS#0000530: added lost assignments.settlement column in database creation
    scripts (alec)
  - fixed value of avg upload in stats on Node Info (alec)
  - fixed summaries on customer liabilities list (alec)
  - BTS#0000544: lmsd/payments: fixed date calculations (alec)
  - included credit notes in Finances -> Print -> Invoices (alec)
  - fixed database dump recovering, specially for daemon configuration,
    also increased max line size to 8192 bytes (alec)
  - setting last reload time for reloads of type 'exec' (alec)
  - BTS#0000547: fixed items count on invoice note when invoice position
    is deleted (alec)
  - fixed customer selection in invoices and receipts (alec)
  - added possibility to enable/disable warnings for found customers (chilek)
  - added option phpui/helpdesk_reply_body (alec)
  - lmsd: fixed configuration parser, orphaned backslashes are not removed (alec)
  - while editing/adding value of lmsd's configuration option 'script' it's