@@ -1,13 +1,20 @@
 <!--// $Id$ //-->
 <TABLE WIDTH="100%" CELLPADDING="3">
-	<TR CLASS="DARK" onClick="showOrHide('customerassignments');">
-		<TD class="fall">
+	<TR CLASS="DARK">
+		<TD class="fleftu" align="left" nowrap="nowrap" onClick="showOrHide('customerassignments');">
 			<IMG src="img/money.gif" alt="">
 			<B><A name="balance">{t}Customer Liabilities:{/t}</A></B>
 		</TD>
+		<TD class="frightu" align="right">
+			{if $layout.module == 'customerassignmentsedit'}
+		        <A href="?m=customerassignmentsedit&expired={if $expired}0{else}1{/if}&id={$assignmentedit.id}">{if $expired}{t}Hide expired{/t}{else}{t}Show expired{/t}{/if} &raquo;</A>
+			{else}
+			<A href="?m=customerinfo&expired={if $expired}0{else}1{/if}&id={$balancelist.customerid}">{if $expired}{t}Hide expired{/t}{else}{t}Show expired{/t}{/if} &raquo;</A>
+			{/if}
+		</TD>
 	</TR>
 	<TR id="customerassignments" style="display:none;">
-		<TD WIDTH="100%" class="fall">
+		<TD WIDTH="100%" class="fall" colspan="2">
 			<TABLE cellpadding="5" cellspacing="0" WIDTH="100%">
 				<TR class="dark">
 					<TD WIDTH="92%" NOWRAP class="fleftu"><B>{t}Liability:{/t}</B></TD>
@@ -22,7 +29,8 @@
 				</TR>
 				{cycle name=assign values="light,lucid" print=false}
 				{foreach from=$assignments item=a}
-				<TR class="{cycle name=assign}{if ($a.dateto < $smarty.now && $a.dateto) || ($a.datefrom > $smarty.now && $a.datefrom && $a.period) || $a.suspended} blend{/if}" onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')" >
+				<TR class="{cycle name=assign}{if ($a.dateto < $smarty.now && $a.dateto) || ($a.datefrom > $smarty.now && $a.datefrom && $a.period) || $a.suspended} blend{/if}"
+				    onmouseover="addClass(this, 'highlight')" onmouseout="removeClass(this, 'highlight')" >
 					{if !$a.tariffid && !$a.liabilityid}
 					<TD WIDTH="98%" COLSPAN="7"><B>{t}Suspending of all liabilities{/t}</B></TD>
 					{else}
