@@ -40,6 +40,7 @@ version ? (????-??-??):
     in LMS packages (alec)
     ************ WARNING: remove contents of templates_c directory! ************
   - added 'post-action' in document templates (alec)
+  - hidding/showing customer's expired liabilities on the list (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
